--- a/src/main/resources/db/migration/001-create-user-table.yaml
+++ b/src/main/resources/db/migration/001-create-user-table.yaml
@@ -49,4 +49,4 @@ databaseChangeLog:
                   value: "ADMIN"
               - column:
                   name: enabled
-                  value: "1"
+                  valueBoolean: true
