--- a/src/main/resources/db/migration/changelog-master.yaml
+++ b/src/main/resources/db/migration/changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: db/migration/001-create-user-table.yaml
+  - include:
+      file: db/migration/002-create-card-table.yaml
