Add Transaction entity

--- a/src/main/resources/db/migration/changelog-master.yaml
+++ b/src/main/resources/db/migration/changelog-master.yaml
@@ -3,3 +3,5 @@ databaseChangeLog:
       file: db/migration/001-create-user-table.yaml
   - include:
       file: db/migration/002-create-card-table.yaml
+  - include:
+      file: db/migration/003-create-transaction-table.yaml
